﻿FIXES
- Fix comboboxes triggering force close on themselves when they should be opening.
- Use the correct spawn distance based on the spawn distance toggle for tournaments.
- Don't extend from ground targets when using a weapon that doesn't target ground targets, immediately look for another target instead.
IMPROVEMENTS
- Set the default evasionTimeThreshold to 0.1s.

v1.4.13.1
IMPROVEMENTS
- Apply/de-apply the intake hack when toggling the option in the settings.
- Hack intakes (if enabled) on newly spawned vessels spawned by VesselMover or SPH→runway.
- Count rockets fired separately from shots fired and calculate rocket accuracy from the number of rocket strikes.

v1.4.13.0
FIXES
- Tournaments:
	- Fix some typos and bugs in assist counting in the local tournament parser.
	- Clear rocket dictionaries between heats. Compute assists under the same conditions for local and remote tournaments.
	- Cause a spawn failure instead of throwing an exception so that tournaments can retry spawning.
- Craft/Battle Damage:
	- Fix SelfSealingTanks being addable to engines.
	- Fix SelfSealingTanks not showing on/off status on load.
	- Fix SelfSealingTanks not respecting symmetry.
	- Re-add ModuleSelfSealingTank to Cockpits (for armored cockpits).
	- Fix fires not extinguishing if fuel < 0.
	- Fix engine fire behavior, now capped to max one fire at a time.
	- Fix Steel parts gaining more than the 1.75x HP they should be getting.
	- Fix fire generation on subsystem damage.
	- Fixes non-fueltank fires not burning out and extinguishing after a period of time.
	- Fix inert tanks not catching all possible sources of fire generation.
	- Fix invalid cast and NRE for modular missiles.
- AI:
	- Fix AI aim offset being offset.
	- Only extend when a bomb is selected once extending is requested.
	- Activate only the current mode of multi-modal engines.