@@ -1,13 +1,14 @@
 using UnityEngine;
 
+using System.IO;
 using System.Collections.Generic;
 
 namespace BDArmory.Core
 {
     public class BDArmorySettings
     {
-        public static string oldSettingsConfigURL = "GameData/BDArmory/settings.cfg"; // Migrate from the old settings file to the new one in PluginData so that we don't invalidate the ModuleManager cache.
-        public static string settingsConfigURL = "GameData/BDArmory/PluginData/settings.cfg";
+        public static string oldSettingsConfigURL = Path.Combine(KSPUtil.ApplicationRootPath, "GameData/BDArmory/settings.cfg"); // Migrate from the old settings file to the new one in PluginData so that we don't invalidate the ModuleManager cache.
+        public static string settingsConfigURL = Path.Combine(KSPUtil.ApplicationRootPath, "GameData/BDArmory/PluginData/settings.cfg");
         public static bool ready = false;
 
         // Settings section toggles
