@@ -762,7 +762,7 @@ namespace BDArmory.Control
             }
 
             // Dump the log results to a file
-            var folder = Path.Combine(Environment.CurrentDirectory, "GameData", "BDArmory", "Logs");
+            var folder = Path.Combine(KSPUtil.ApplicationRootPath, "GameData", "BDArmory", "Logs");
             if (BDATournament.Instance.tournamentStatus == TournamentStatus.Running)
             {
                 folder = Path.Combine(folder, "Tournament " + BDATournament.Instance.tournamentID, "Round " + BDATournament.Instance.currentRound);
